# lifeblocks

./: .gitignore  README.md  lifeblocks.py  pyproject.toml  requirements.txt  run.sh
src/lifeblocks/: main.py
src/lifeblocks/models/: __init__.py  block.py  block_queue.py  database.py  settings.py  timeblock.py
src/lifeblocks/services/: __init__.py  block_service.py  data_service.py  notification_service.py  settings_service.py  timer_service.py
src/lifeblocks/ui/: __init__.py  block_frame.py  history_frame.py  main_window.py  theme_manager.py  timer_frame.py  tooltip.py
src/lifeblocks/ui/dialogs/: add_block_dialogue.py  add_timeblock_dialog.py  base_dialog.py  block_dialog.py  completion_dialog.py  data_dialog.py  edit_block_dialog.py  edit_block_dialogue.py  edit_timeblock_dialog.py  hotkeys_dialog.py  resistance_dialog.py  settings_dialog.py  start_block_dialog.py  timeblock_dialog.py
tests/: test_block_service.py
