[project]
name = "lifeblocks"
version = "0.1.0"
description = "A time management and project tracking application"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "SQLAlchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black",       # code formatting
    "mypy",        # type checking
    "pytest",      # testing
]

[project.scripts]
lifeblocks = "lifeblocks.main:main"

[tool.black]
target-version = ["py38"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["lifeblocks"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"